--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,4 +1,6 @@
 {
+  "appSaveErrorExitLoseChanges": "Salir y perder todos los cambios",
+  "appSaveErrorExitLoseChangesBody": "Puedes salir y perder todos los cambios o ir a las opciones del archivo para exportar los datos",
   "retToApp": "volver a la aplicación",
   "name": "nombre",
   "icon": "icono",
@@ -25,7 +27,7 @@
   "ctrlKey": "ctrl",
   "shiftKey": "mayús",
   "altKey": "alt",
-  "error": "fallo",
+  "error": "error",
   "cache": "caché",
   "file": "archivo",
   "device": "Dispositivo",
@@ -57,7 +59,7 @@
   "alertDoNotAsk": "No volver a preguntar",
   "appBeta": "ADVERTENCIA: versión beta, sólo para pruebas",
   "footerOpen": "Abrir / Nueva",
-  "footerSyncError": "Fallo al sincronizar",
+  "footerSyncError": "Error al sincronizar",
   "footerTitleGen": "Generar",
   "footerTitleLock": "Bloquear",
   "genLen": "Longitud",
@@ -180,12 +182,12 @@
   "openPass": "Contraseña",
   "openPassDesc": "Contraseña de servidor WebDAV (no es la contraseña de tu archivo)",
   "openPassPlaceholder": "sin contraseña",
-  "openConfigError": "Fallo: {}",
+  "openConfigError": "Error: {}",
   "openConfigErrorNotFound": "Archivo no encontrado",
-  "openError": "Fallo",
-  "openErrorDescription": "Ha ocurrido un fallo al abrir el archivo",
+  "openError": "Error",
+  "openErrorDescription": "Ha ocurrido un error al abrir el archivo",
   "openErrorFileNotFound": "Archivo no encontrado",
-  "openListErrorBody": "Se ha producido un fallo al cargar la lista de archivos",
+  "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
   "openFileNoCacheError": "Archivo no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado la caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y añádelo de nuevo.",
   "openChalRespHeader": "Reto-Respuesta",
@@ -270,10 +272,10 @@
   "detSetupOtpManualButton": "Introducir código manualmente",
   "detSetupOtpScanButton": "Seleccionar/Escanear",
   "detSetupOtpAlertBodyWith": "con {}",
-  "detOtpImageError": "Fallo al leer imagen",
+  "detOtpImageError": "Error al leer imagen",
   "detOtpImageErrorBody": "Perdón, no pudimos leer el formato de imagen, por favor, contacta con los autores de la aplicación y remíteles los detalles del error.",
   "detOtpImageReading": "Leyendo código QR...",
-  "detOtpQrError": "Fallo al escanear código QR",
+  "detOtpQrError": "Error al escanear código QR",
   "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación y remíteles los detalles del error.",
   "detOtpQrWrong": "Código QR erróneo",
   "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de códigos de un solo uso.",
@@ -290,7 +292,7 @@
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
   "autoTypeLink": "más...",
-  "autoTypeError": "Fallo de autocompletado",
+  "autoTypeError": "Error en autocompletado",
   "autoTypeErrorGeneric": "Se ha producido un fallo al realizar el autocompletado: {}",
   "autoTypeErrorGlobal": "Por favor, abre la aplicación en la que quieres introducir tu contraseña para utilizar un atajo de teclado global",
   "autoTypeErrorNotInstalled": "{} no está instalado",
@@ -313,11 +315,11 @@
   "appCannotLockAutoInit": "Esta aplicación no se puede bloquear porque el autoguardado está desactivado.",
   "appCannotLock": "Tienes cambios sin guardar que se perderán. ¿Continuar?",
   "appAutoSave": "Guardar cambios automáticamente",
-  "appSaveError": "Fallo al guardar",
+  "appSaveError": "Error de guardado",
   "appSaveErrorBody": "Fallo al guardar automáticamente el archivo",
   "appSaveErrorBodyMul": "Fallo al guardar automáticamente los archivos:",
-  "appSettingsError": "Fallo al cargar la aplicación",
-  "appSettingsErrorBody": "Se ha producido un fallo al cargar los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
+  "appSettingsError": "Error al cargar la aplicación",
+  "appSettingsErrorBody": "Se ha producido un error al cargar los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
   "appNotSupportedError": "Tu navegador no soporta algunas de las características requeridas por esta aplicación.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
@@ -337,7 +339,7 @@
   "setGenNoUpdate": "No comprobar actualizaciones",
   "setGenUpdateChecking": "Buscando actualizaciones",
   "setGenCheckUpdate": "Buscar actualizaciones",
-  "setGenErrorChecking": "Fallo al buscar actualizaciones",
+  "setGenErrorChecking": "Error al buscar actualizaciones",
   "setGenLastCheckSuccess": "Última búsqueda satisfactoria en {}",
   "setGenLastCheckVer": "la última versión era {}",
   "setGenCheckedAt": "Comprobado el",
@@ -345,18 +347,21 @@
   "setGenNewVer": "nueva versión {} disponible",
   "setGenDownloadingUpdate": "Descargando actualización...",
   "setGenExtractingUpdate": "Extrayendo actualización...",
-  "setGenCheckErr": "Se ha producido un fallo al descargar la nueva versión",
+  "setGenCheckErr": "Se ha producido un error al descargar la nueva versión",
   "setGenNeverChecked": "Nunca se han comprobado actualizaciones ",
   "setGenRestartToUpdate": "Reinicia la aplicación para actualizar",
   "setGenDownloadAndRestart": "Descargar actualización y reiniciar",
   "setGenAppearance": "Apariencia",
   "setGenTheme": "Tema",
+  "setGenThemeDark": "Oscuro",
+  "setGenThemeLight": "Claro",
   "setGenThemeFb": "Azul plano",
   "setGenThemeDb": "Marrón oscuro",
   "setGenThemeTe": "Terminal",
   "setGenThemeHc": "Alto contraste",
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
+  "setGenMoreThemes": "Más temas",
   "setGenLocale": "Idioma",
   "setGenLocOther": "otros idiomas están disponibles como complementos",
   "setGenFontSize": "Tamaño de letra",
@@ -423,7 +428,7 @@
   "setFileLastSync": "Última sincronización",
   "setFileLastSyncUnknown": "desconocido",
   "setFileSyncInProgress": "sincronización en progreso",
-  "setFileSyncError": "Fallo al sincronizar",
+  "setFileSyncError": "Error al sincronizar",
   "setFilePass": "Contraseña maestra",
   "setFileConfirmPass": "Confirmar contraseña maestra",
   "setFilePassChange": "para cambiar tu contraseña, por favor escríbela en el campo de confirmación",
@@ -446,8 +451,8 @@
   "setFileBackupTime": "Crear copias de respaldo",
   "setFileBackupNow": "Respaldar ahora",
   "setFileBackupNowWorking": "Trabajando...",
-  "setFileBackupError": "Fallo al respaldar",
-  "setFileBackupErrorDescription": "Fallo al guardar la copia de respaldo",
+  "setFileBackupError": "Error al respaldar",
+  "setFileBackupErrorDescription": "Error al guardar la copia de respaldo",
   "setFileBackupErrorIsDir": "Ruta de copia de respaldo inválida",
   "setFileBackupErrorIsDirDescription": "La ruta de la copia de respaldo parece apuntar a una carpeta. Por favor, cambia la ruta a un nombre de archivo dentro de una carpeta.",
   "setFileBackupOnSave": "Cada vez que guardo el archivo",
@@ -468,8 +473,8 @@
   "setFileDontUseKeyFile": "No usar un archivo llave",
   "setFileEmptyPass": "Contraseña vacía",
   "setFileEmptyPassBody": "Guardar una base de datos sin contraseña hace que esté totalmente desprotegida. ¿Seguro que deseas continuar?",
-  "setFileSaveError": "Fallo al guardar",
-  "setFileSaveErrorBody": "Fallo al guardar en archivo",
+  "setFileSaveError": "Error de guardado",
+  "setFileSaveErrorBody": "Error al guardar en archivo",
   "setFileAlreadyExists": "Ya existe",
   "setFileAlreadyExistsBody": "El archivo {} ya existe. ¿Reemplazar?",
   "setFileUnsaved": "Cambios sin guardar",
@@ -529,9 +534,9 @@
   "setPlCreatedBy": "Creado por {}",
   "setPlLoadTime": "ha tardado {} en cargar",
   "setPlLastUpdate": "Última vez comprobado",
-  "setPlLoadError": "fallo al cargar complemento",
+  "setPlLoadError": "error al cargar complemento",
   "setPlGalleryLoading": "Cargando complementos, por favor, espera un momento",
-  "setPlGalleryLoadError": "Fallo al cargar complementos",
+  "setPlGalleryLoadError": "Error al cargar complementos",
   "setPlInstallUrlTitle": "Añadir complemento desde URL",
   "setPlInstallUrlDesc": "Si el complemento no está en la galería, puedes instalarlo manualmente desde una URL",
   "setPlOfficial": "Complemento Oficial de KeeWeb",
