--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -316,6 +316,8 @@
   "appSaveError": "Mentési hiba",
   "appSaveErrorBody": "Fájl automatikus mentése sikertelen",
   "appSaveErrorBodyMul": "Fájlok automatikus mentése sikertelen:",
+  "appSaveErrorExitLoseChanges": "Kilépés, minden változtatás elvesztésével",
+  "appSaveErrorExitLoseChangesBody": "Ön vagy kilép az alkalmazásból, – így minden változtatás elveszik, vagy a fájl beállításokban exportálja az adatokat",
   "appSettingsError": "Hiba az alkalmazás betöltése során",
   "appSettingsErrorBody": "Hiba történt az alkalmazás beállításainak betöltése közben. Kérem még egyszer ellenőrizze az alkalmazás URL-jét, vagy vegye fel a kapcsolatot a rendszergazdával.",
   "appNotSupportedError": "A böngészője nem támogat némely fontos sajátosságokat amiket az alkalmazás használ.",
@@ -568,7 +570,7 @@
   "setAboutTitle": "Névjegy",
   "setAboutBuilt": "Ez az alkalmazás ezekkel a fantasztikus eszközökkel készült",
   "setAboutLic": "Licenc",
-  "setAboutLicComment": "Az alkalmazás és minden komponense az MIT licenc alatt kerültek kiadásra.",
+  "setAboutLicComment": "Az alkalmazás és minden komponense az MIT licenc alatt kerültek kiadásra, kivéve ha ez nincs másképpen meghatározva.",
   "setAboutFirst": "Ez egy nyílt forráskódú alkalmazás, melyet {} készített.",
   "setAboutSecond": "és licencelve {} alatt.",
   "setAboutSource": "A forráskód és a problémák a {}-on érhetők el.",
