--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -316,6 +316,8 @@
   "appSaveError": "エラーを保存する",
   "appSaveErrorBody": "ファイルの自動保存に失敗しました",
   "appSaveErrorBodyMul": "ファイルの自動保存に失敗しました:",
+  "appSaveErrorExitLoseChanges": "変更を破棄して閉じる",
+  "appSaveErrorExitLoseChangesBody": "変更をすべて破棄してアプリを終了するか、データをエクスポートするためのファイル設定ができます",
   "appSettingsError": "アプリのロード中にエラーが発生しました",
   "appSettingsErrorBody": "アプリの設定をロード中にエラーが発生しました。アプリのURLを再度確認するか、管理者に連絡してください。",
   "appNotSupportedError": "お使いのブラウザは、アプリが利用する機能をサポートしていません。",
@@ -351,12 +353,15 @@
   "setGenDownloadAndRestart": "更新をダウンロードして再起動する",
   "setGenAppearance": "外観",
   "setGenTheme": "テーマ",
+  "setGenThemeDark": "ダーク",
+  "setGenThemeLight": "ライト",
   "setGenThemeFb": "フラットブルー",
   "setGenThemeDb": "ダークブラウン",
   "setGenThemeTe": "ターミナル",
   "setGenThemeHc": "ハイコントラスト",
   "setGenThemeSd": "Solarized ダーク",
   "setGenThemeSl": "Solarized ライト",
+  "setGenMoreThemes": "その他のテーマ",
   "setGenLocale": "言語",
   "setGenLocOther": "他の言語はプラグインで利用可能です",
   "setGenFontSize": "フォントサイズ",
@@ -371,6 +376,7 @@
   "setGenTableView": "エントリーをテーブル表示する",
   "setGenColorfulIcons": "リスト中で色付きのカスタムアイコンを使用する",
   "setGenUseMarkdown": "ノート内でMarkdownを有効にする",
+  "setGenUseGroupIconForEntries": "新しいエントリにグループアイコンを自動的に使用する",
   "setGenDirectAutotype": "一致するエントリーが一つだけの場合、自動入力でそのエントリーを使用する",
   "setGenFunction": "機能",
   "setGenAutoSyncOnClose": "閉じるときに自動で保存と同期を行う",
@@ -564,7 +570,7 @@
   "setAboutTitle": "概要",
   "setAboutBuilt": "このアプリはこれらの素晴らしいツールを使用して作成されています",
   "setAboutLic": "ライセンス",
-  "setAboutLicComment": "このアプリ自身と、パブリックドメインでないすべての内蔵コンポーネントは、MITライセンスでライセンスされています",
+  "setAboutLicComment": "特に指定がない限り、アプリ自体と含まれるすべてのコンポーネントはMITライセンスの下でライセンスされます",
   "setAboutFirst": "これは{}によって作成されたオープンソースのアプリです",
   "setAboutSecond": "でライセンスは{}です",
   "setAboutSource": "ソースコードと課題の管理は{}で行われています。",
@@ -598,7 +604,9 @@
   "gdriveSharedWithMe": "共有アイテム",
   "webdavSaveMethod": "保存方式",
   "webdavSaveMove": "一時ファイルをアップロードして移動する",
-  "webdavSavePut": "PUTメソッドでkbdxファイルを上書きする",
+  "webdavSavePut": "kdbxファイルをPUTで上書きします",
+  "webdavNoLastModified": "最終変更されたHTTPヘッダーがありません",
+  "webdavStatReload": "最終更新 HTTPヘッダーに依存するのではなく、常にファイルをリロードします",
   "launcherSave": "パスワードデータベースを保存",
   "launcherFileFilter": "KeePassファイル",
   "authPopupRequired": "ポップアップはブロックされました",
@@ -620,5 +628,6 @@
   "yubiKeyTouchRequestedHeader": "YubiKeyをタッチ",
   "yubiKeyTouchRequestedBody": "シリアル番号{}のYubiKeyにタップしてください",
   "yubiKeyDisabledErrorHeader": "USBが無効です",
-  "yubiKeyDisabledErrorBody": "このファイルを開くにはYubiKeyが必要です。設定からUSBデバイスを有効化してください。"
+  "yubiKeyDisabledErrorBody": "このファイルを開くにはYubiKeyが必要です。設定からUSBデバイスを有効化してください。",
+  "yubiKeyErrorWithCode": "YubiKeyエラー、コード{}"
 }
