--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,6 +1,4 @@
 {
-  "appSaveErrorExitLoseChanges": "Zamknij i utrać wszystkie zmiany",
-  "appSaveErrorExitLoseChangesBody": "Możesz zamknąć aplikację i utracić wszystkie zmiany lub przejść do ustawień pliku, aby wyeksportować dane",
   "retToApp": "Wróć do aplikacji",
   "name": "Nazwa",
   "icon": "Ikona",
@@ -318,6 +316,8 @@
   "appSaveError": "Błąd zapisu",
   "appSaveErrorBody": "Nie udało się autozapisywanie pliku",
   "appSaveErrorBodyMul": "Nie udało się autozapisywanie plików:",
+  "appSaveErrorExitLoseChanges": "Zamknij i utrać wszystkie zmiany",
+  "appSaveErrorExitLoseChangesBody": "Możesz zamknąć aplikację i utracić wszystkie zmiany lub przejść do ustawień pliku, aby wyeksportować dane",
   "appSettingsError": "Błąd ładowania aplikacji",
   "appSettingsErrorBody": "Wystąpił błąd podczas ładowania ustawień aplikacji. Proszę sprawdzać dwukrotnie URL aplikacji albo skontaktować się z administratorem.",
   "appNotSupportedError": "Twoja przeglądarka nie obsługuje niektórych ważnych funkcji, z których korzystamy.",
@@ -570,7 +570,7 @@
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
-  "setAboutLicComment": "Sama aplikacja i wszystkie zawarte w niej komponenty są objęte licencją MIT",
+  "setAboutLicComment": "Sama aplikacja i wszystkie zawarte w niej komponenty są objęte licencją MIT, chyba że określono inaczej",
   "setAboutFirst": "Jest to aplikacja otwartoźródłowa stworzona przez {}",
   "setAboutSecond": "i na mocy licencji {}.",
   "setAboutSource": "Kod źródłowy oraz zagadnienia dostępne na {}.",
