--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -1,6 +1,4 @@
 {
-  "appSaveErrorExitLoseChanges": "Ukončiť a stratiť všetky zmeny.",
-  "appSaveErrorExitLoseChangesBody": "Môžete buď ukončiť aplikáciu a stratiť všetky zmeny, alebo ísť do nastavení súborov a exportovať dáta.",
   "retToApp": "návrat do aplikácie",
   "name": "meno",
   "icon": "ikona",
@@ -318,6 +316,8 @@
   "appSaveError": "Chyba uloženia",
   "appSaveErrorBody": "Automatické uloženie súboru zlyhalo",
   "appSaveErrorBodyMul": "Automatické uloženie súborov zlyhalo:",
+  "appSaveErrorExitLoseChanges": "Ukončiť a stratiť všetky zmeny.",
+  "appSaveErrorExitLoseChangesBody": "Môžete buď ukončiť aplikáciu a stratiť všetky zmeny, alebo ísť do nastavení súborov a exportovať dáta.",
   "appSettingsError": "Chyba načítania aplikácie",
   "appSettingsErrorBody": "Chyba načítania nastavení aplikácie. Prosím overte dvakrát URL aplikácie alebo kontaktujte svojho administrátora.",
   "appNotSupportedError": "Váš prehliadač nepodporuje niektoré dôležite funkcie, ktoré používame.",
@@ -570,7 +570,7 @@
   "setAboutTitle": "O",
   "setAboutBuilt": "Aplikácia je vytvorená týmito úžasnými nástrojmi",
   "setAboutLic": "Licencia",
-  "setAboutLicComment": "Aplikácia samotná a všetky zahrnuté komponenty sú licencované pod MIT licenciou",
+  "setAboutLicComment": "Aplikácia samotná a všetky zahrnuté komponenty sú licencované pod MIT licenciou, pokiaľ nie je uvedené inak",
   "setAboutFirst": "Túto aplikáciu s otvoreným kódom vytvoril {}",
   "setAboutSecond": "a licencovaná pod {}",
   "setAboutSource": "Zdrojové kódy a problémy sú na {}",
@@ -606,6 +606,7 @@
   "webdavSaveMove": "Nahrať dočasný súbor a presunúť",
   "webdavSavePut": "Prepísať kdbx súbor metódou PUT",
   "webdavNoLastModified": "Chýba posledne zmenená HTTP hlavička.",
+  "webdavStatReload": "Vždy načítať súbor namiesto vyhodnocovania HTTP hlavičky naposledy zmenené",
   "launcherSave": "Uložiť Databázu Hesiel",
   "launcherFileFilter": "Súbor KeePass",
   "authPopupRequired": "Vyskakovacie okná sú blokované",
