--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -316,6 +316,8 @@
   "appSaveError": "Kayıt Hatası",
   "appSaveErrorBody": "Dosya otomatik olarak kaydedilemedi",
   "appSaveErrorBodyMul": "Dosyalar otomatik olarak kaydedilemedi:",
+  "appSaveErrorExitLoseChanges": "Çık ve tüm değişiklikleri kaybet",
+  "appSaveErrorExitLoseChangesBody": "Uygulamadan çıkıp tüm değişiklikleri kaybedebilir veya verileri dışa aktarmak için dosya ayarlarına gidebilirsiniz",
   "appSettingsError": "Uygulama başlatılırken hata",
   "appSettingsErrorBody": "Uygulama ayarları yüklenirken bir hata oluştu. Lütfen uygulama URL’sini iki kez kontrol edin veya yöneticinize başvurun.",
   "appNotSupportedError": "Tarayıcınız kullandığımız bazı önemli özellikleri desteklemiyor.",
@@ -351,12 +353,15 @@
   "setGenDownloadAndRestart": "Güncellemeyi indir ve yeniden başlat",
   "setGenAppearance": "Görünüm",
   "setGenTheme": "Tema",
+  "setGenThemeDark": "Koyu",
+  "setGenThemeLight": "Açık",
   "setGenThemeFb": "Düz mavi",
   "setGenThemeDb": "Koyu kahverengi",
   "setGenThemeTe": "Uçbirim",
   "setGenThemeHc": "Yüksek kontrast",
   "setGenThemeSd": "Solarize koyu",
   "setGenThemeSl": "Solarize aydınlık",
+  "setGenMoreThemes": "Diğer temalar",
   "setGenLocale": "Dil",
   "setGenLocOther": "Diğer diller eklenti olarak mevcuttur",
   "setGenFontSize": "Yazı tipi boyutu",
@@ -600,6 +605,8 @@
   "webdavSaveMethod": "Yöntemi kaydet",
   "webdavSaveMove": "Karşıya geçici bir dosya yükle ve taşı",
   "webdavSavePut": "PUT ile kdbx dosyasının üzerine yaz",
+  "webdavNoLastModified": "Son-Düzenlenme HTTP üst bilgisi yok",
+  "webdavStatReload": "Son-Düzenlenme HTTP başlığına güvenmek yerine her zaman dosyayı yeniden yükleyin",
   "launcherSave": "Parola Veritabanını Kaydet",
   "launcherFileFilter": "KeePass dosyaları",
   "authPopupRequired": "Açılır pencereler engellendi",
@@ -621,5 +628,6 @@
   "yubiKeyTouchRequestedHeader": "YubiKey'e dokunun",
   "yubiKeyTouchRequestedBody": "Lütfen YubiKey'nize {} seri numarası ile dokunun",
   "yubiKeyDisabledErrorHeader": "USB devre dışı",
-  "yubiKeyDisabledErrorBody": "Bu dosyayı açmak için YubiKey gereklidir, lütfen ayarlardan USB cihazlarını etkinleştirin."
+  "yubiKeyDisabledErrorBody": "Bu dosyayı açmak için YubiKey gereklidir, lütfen ayarlardan USB cihazlarını etkinleştirin.",
+  "yubiKeyErrorWithCode": "YubiKey hatası, kod {}."
 }
