--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -315,6 +315,7 @@
   "appSaveError": "Errore di salvataggio",
   "appSaveErrorBody": "Errore nel salvataggio automatico",
   "appSaveErrorBodyMul": "Errore nel salvataggio automatico",
+  "appSaveErrorExitLoseChanges": "Chiudi senza salvare le modifiche",
   "appSettingsError": "Errore di caricamento",
   "appSettingsErrorBody": "Si è verificato un errore nel caricamento delle impostazioni. Per favore, ricontrolla l'URL della app o contatta il tuo amministratore.",
   "appNotSupportedError": "Il tuo browser non è supportato.",
@@ -350,12 +351,15 @@
   "setGenDownloadAndRestart": "Scarica aggiornamento e riavvia",
   "setGenAppearance": "Aspetto",
   "setGenTheme": "Tema",
+  "setGenThemeDark": "Scuro",
+  "setGenThemeLight": "Chiaro",
   "setGenThemeFb": "Blu",
   "setGenThemeDb": "Marrone scuro",
   "setGenThemeTe": "Terminale",
   "setGenThemeHc": "Alto contrasto",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenMoreThemes": "Altri temi",
   "setGenLocale": "Lingua",
   "setGenLocOther": "altre lingue sono disponibili con i plugin",
   "setGenFontSize": "Dimensione carattere",
@@ -554,6 +558,7 @@
   "setDevicesYubiKeyOtpDesc": "YubiKey può essere utilizzato per generare codici monouso per diversi servizi.",
   "setDevicesYubiKeyOtpShowIcon": "Mostra l'icona nella schermata iniziale",
   "setDevicesYubiKeyOtpAutoOpen": "Carica automaticamente i codici monouso quando sono presenti file aperti",
+  "setDevicesYubiKeyOtpMatchEntries": "Mostra i codici monouso corrispondenti nelle voci",
   "setDevicesYubiKeyChalRespShow": "Mostra l'opzione per utilizzare una YubiKey durante l'apertura dei file",
   "setDevicesYubiKeyStuckWorkaround": "Ricollega la YubiKey se sembra bloccata durante il caricamento",
   "setAboutTitle": "Info su",
@@ -611,5 +616,6 @@
   "yubiKeySlot": "slot",
   "yubiKeyTouchRequestedBody": "inserisci la tua YubiKey con il numero di serie {}",
   "yubiKeyDisabledErrorHeader": "La USB è disabilitata",
-  "yubiKeyDisabledErrorBody": "La YubiKey è necessaria per aprire questo file, abilitare i dispositivi USB nelle impostazioni."
+  "yubiKeyDisabledErrorBody": "La YubiKey è necessaria per aprire questo file, abilitare i dispositivi USB nelle impostazioni.",
+  "yubiKeyErrorWithCode": "Errore YubiKey, codice {}."
 }
