--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -40,13 +40,13 @@
   "menuSetAbout": "Acerca de",
   "menuSetDevices": "Dispositivos",
   "menuAlertNoTags": "Sin etiquetas",
-  "menuAlertNoTagsBody": "Puedes añadir nuevas etiquetas mientras editas los campos en la sección de Etiquetas.",
+  "menuAlertNoTagsBody": "Puedes añadir nuevas etiquetas mientras editas los campos, en la sección de Etiquetas.",
   "menuEmptyTrash": "Vaciar papelera",
   "menuEmptyTrashAlert": "¿Vaciar papelera?",
   "menuEmptyTrashAlertBody": "No podrás recuperar los elementos eliminados",
   "menuItemCollapsed": "Doble clic para expandir",
   "menuRestoreApp": "Abrir {}",
-  "menuQuitApp": "Cerrar {}",
+  "menuQuitApp": "Quitar {}",
   "alertYes": "Sí",
   "alertNo": "No",
   "alertOk": "Aceptar",
@@ -353,15 +353,26 @@
   "setGenDownloadAndRestart": "Descargar actualización y reiniciar",
   "setGenAppearance": "Apariencia",
   "setGenTheme": "Tema",
+  "setGenThemeDefault": "Por defecto",
   "setGenThemeDark": "Oscuro",
   "setGenThemeLight": "Claro",
-  "setGenThemeFb": "Azul plano",
+  "setGenThemeBlue": "Azul plano",
+  "setGenThemeFb": "Azul oscuro",
+  "setGenThemeBl": "Azul claro",
+  "setGenThemeBrown": "Color bizcocho",
   "setGenThemeDb": "Marrón oscuro",
+  "setGenThemeLb": "Marrón claro",
+  "setGenThemeTerminal": "Terminal",
   "setGenThemeTe": "Terminal",
+  "setGenThemeLt": "Terminal claro",
+  "setGenThemeHighContrast": "Alto contraste",
   "setGenThemeHc": "Alto contraste",
+  "setGenThemeDc": "Contraste oscuro",
+  "setGenThemeSol": "Solarizado",
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
   "setGenMoreThemes": "Más temas",
+  "setGenAutoSwitchTheme": "Cambiar automáticamente entre los temas claro y oscuro cuando sea posible",
   "setGenLocale": "Idioma",
   "setGenLocOther": "otros idiomas están disponibles como complementos",
   "setGenFontSize": "Tamaño de letra",
@@ -570,7 +581,7 @@
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
-  "setAboutLicComment": "La aplicación en sí misma y todos los complementos incluidos están autorizados bajo la licencia MIT.",
+  "setAboutLicComment": "La aplicación en sí y todos los complementos incluidos están autorizados bajo la licencia del MIT, a menos que se especifique lo contrario",
   "setAboutFirst": "Esta es una aplicación open-source creada por {}",
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
