--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -353,15 +353,26 @@
   "setGenDownloadAndRestart": "Frissítés letöltése és újraindítás",
   "setGenAppearance": "Megjelenés",
   "setGenTheme": "Téma",
+  "setGenThemeDefault": "Alapértelmezett",
   "setGenThemeDark": "Sötét",
   "setGenThemeLight": "Világos",
-  "setGenThemeFb": "Sima kék",
+  "setGenThemeBlue": "Sima kék",
+  "setGenThemeFb": "Sötétkék",
+  "setGenThemeBl": "Világoskék",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Sötét barna",
+  "setGenThemeLb": "Világosbarna",
+  "setGenThemeTerminal": "Terminál",
   "setGenThemeTe": "Terminál",
+  "setGenThemeLt": "Terminál világos",
+  "setGenThemeHighContrast": "Nagykontrasztú",
   "setGenThemeHc": "Nagykontrasztú",
+  "setGenThemeDc": "Sötét kontrasztos",
+  "setGenThemeSol": "Égetett",
   "setGenThemeSd": "Beégetett sötét",
   "setGenThemeSl": "Beégetett világos",
   "setGenMoreThemes": "További témák",
+  "setGenAutoSwitchTheme": "Automatikus váltás a világos és sötét téma között, amennyiben lehetséges",
   "setGenLocale": "Nyelv",
   "setGenLocOther": "további nyelvek beépülőként érhetők el",
   "setGenFontSize": "Betűméret",
