--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -353,15 +353,26 @@
   "setGenDownloadAndRestart": "Update downloaden en opnieuw starten",
   "setGenAppearance": "Uiterlijk",
   "setGenTheme": "Thema",
+  "setGenThemeDefault": "Standaard",
   "setGenThemeDark": "Donker",
   "setGenThemeLight": "Licht",
+  "setGenThemeBlue": "Flets blauw",
   "setGenThemeFb": "Strak blauw",
+  "setGenThemeBl": "Lichtblauw",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Donkerbruin",
+  "setGenThemeLb": "Lichtbruin",
+  "setGenThemeTerminal": "Terminal",
   "setGenThemeTe": "Terminal",
+  "setGenThemeLt": "Terminal licht",
+  "setGenThemeHighContrast": "Hoog contrast",
   "setGenThemeHc": "Hoog contrast",
+  "setGenThemeDc": "Donker contrast",
+  "setGenThemeSol": "Overbelicht",
   "setGenThemeSd": "Overbelicht donker",
   "setGenThemeSl": "Overbelicht licht",
   "setGenMoreThemes": "Meer thema's",
+  "setGenAutoSwitchTheme": "Schakel indien mogelijk automatisch tussen licht en donker thema",
   "setGenLocale": "Taal",
   "setGenLocOther": "andere talen zijn beschikbaar als plug-in",
   "setGenFontSize": "Lettergrootte",
