--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -353,15 +353,26 @@
   "setGenDownloadAndRestart": "Pobierz aktualizację i uruchom ponownie",
   "setGenAppearance": "Wygląd",
   "setGenTheme": "Motyw",
+  "setGenThemeDefault": "Domyślny",
   "setGenThemeDark": "Ciemny",
   "setGenThemeLight": "Jasny",
-  "setGenThemeFb": "Płaski błękit",
+  "setGenThemeBlue": "Płaski błękit",
+  "setGenThemeFb": "Ciemny błękit",
+  "setGenThemeBl": "Jasny błękit",
+  "setGenThemeBrown": "Brąz",
   "setGenThemeDb": "Ciemny brąz",
+  "setGenThemeLb": "Jasny brąz",
+  "setGenThemeTerminal": "Konsolowy",
   "setGenThemeTe": "Terminal",
+  "setGenThemeLt": "Jasny konsolowy",
+  "setGenThemeHighContrast": "Wysoki kontrast",
   "setGenThemeHc": "Wysoki kontrast",
+  "setGenThemeDc": "Ciemny kontrast",
+  "setGenThemeSol": "Solaryzowany",
   "setGenThemeSd": "Solaryzowany ciemny",
   "setGenThemeSl": "Solaryzowany jasny",
   "setGenMoreThemes": "Więcej motywów",
+  "setGenAutoSwitchTheme": "Automatycznie przełączaj między jasnym i ciemnym motywem, jeśli to możliwe",
   "setGenLocale": "Język",
   "setGenLocOther": "inne języki są dostępne jako wtyczki",
   "setGenFontSize": "Rozmiar fontu",
